--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/logo-192x192.png" type="image/png">    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React TS Demo</title>
+    <link rel="icon" href="/public/logo-192x192.png" type="image/png">
+    <link rel="alternate icon" href="/public/favicon.ico" type="ico" sizes="16x16">
+    <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" sizes="180x180">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React Todo List</title>
   </head>
   <body>
     <div id="root"></div>
