--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <footer>
+    <h2>
+    <a href="https://github.com/ndenicolais/">Created by NDN</a>
+    </h2>
+    </footer>
   </body>
 </html>
