--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="alternate icon" href="/public/favicon.ico" type="ico" sizes="16x16">
     <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/public/manifest.json"/>
     <title>React Todo List</title>
   </head>
   <body>
