--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/public/manifest.json"/>
-    <title>React Todo List</title>
+    <title>React App TS</title>
   </head>
   <body>
     <div id="root"></div>
