--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/logo-192x192.png" type="image/png">
-    <link rel="alternate icon" href="/public/favicon.ico" type="ico" sizes="16x16">
-    <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" href="/logo-192x192.png" type="image/png">
+    <link rel="alternate icon" href="/favicon.ico" type="ico" sizes="16x16">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="/public/manifest.json"/>
+    <link rel="manifest" href="/manifest.json"/>
     <title>React App TS</title>
   </head>
   <body>
