Add Service Worker

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="#E8967D">
     <link rel="icon" href="/logo-192x192.png" type="image/png">
     <link rel="alternate icon" href="/favicon.ico" type="ico" sizes="16x16">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
@@ -11,5 +12,18 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(registration => {
+              console.log('Service Worker registrato!');
+            })
+            .catch(err => {
+              console.log('Service Worker non registrato');
+            });
+        });
+      }
+    </script>
   </body>
 </html>
