--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="/manifest.json"/>
-    <title>React App TS</title>
+    <title>PWA APP</title>
   </head>
   <body>
     <div id="root"></div>
